--- a/themes/stack-modified/layouts/partials/article-list/tile.html
+++ b/themes/stack-modified/layouts/partials/article-list/tile.html
@@ -13,24 +13,52 @@
                 {{ if $image.resource }}
                     {{- $imageRaw := $image.resource | resources.Fingerprint "sha384" -}}
                     {{- $Permalink := "" -}}
+                    {{- $PermalinkWebp := "" -}}
                     {{- $Width := $imageRaw.Width -}}
                     {{- $Height := $imageRaw.Height -}}
+                    {{- $WidthWebp := "" -}}
+                    {{- $HeightWebp := "" -}}
+                    {{- $webp := 0 -}}
 
                     {{- $Permalink = printf "%s%s" $ImageURL $imageRaw.RelPermalink -}}
 
                     {{- if (default true .Site.Params.imageProcessing.cover.enabled) -}}
                         {{- $thumbnail := $imageRaw.Fill .size -}}
-                        {{- $Permalink = printf "%s%s" $ImageURL $thumbnail.RelPermalink -}}
                         {{- $Width = $thumbnail.Width -}}
                         {{- $Height = $thumbnail.Height -}}
+                        {{- $thumbnailWebp := $imageRaw.Fill "250x150 webp" -}}
+                        {{- $WidthWebp = $thumbnailWebp.Width -}}
+                        {{- $HeightWebp = $thumbnailWebp.Height -}}
+                        {{- $Permalink = printf "%s%s" $ImageURL $thumbnail.RelPermalink -}}
+                        {{- if lt (len $thumbnailWebp.Content) (len $thumbnail.Content) -}}
+                            {{- $webp = 1 -}}
+                            {{- $PermalinkWebp = printf "%s%s" $ImageURL $thumbnailWebp.RelPermalink -}}
+                        {{- end -}}
                     {{- end -}}
-                    
+                    {{- if eq $webp 1 -}}
+                    <picture>
+                        <source {{ with $PermalinkWebp }}srcset="{{ . }}"{{ end }}
+                                {{ with $Width }}width="{{ . }}"{{ end }}
+                                {{ with $Height }}height="{{ . }}"{{ end }}
+                                type="image/webp">
+                        <source {{ with $Permalink }}srcset="{{ . }}"{{ end }}
+                                {{ with $Width }}width="{{ . }}"{{ end }}
+                                {{ with $Height }}height="{{ . }}"{{ end }}> 
+                                <img src="{{ $Permalink }}" 
+                                width="{{ $Width }}" 
+                                height="{{ $Height }}" 
+                                loading="lazy" 
+                                data-key="{{ .context.Slug }}" 
+                                data-hash="{{ $imageRaw.Data.Integrity }}">
+                    </picture>
+                    {{- else -}}
                     <img src="{{ $Permalink }}" 
                         width="{{ $Width }}" 
                         height="{{ $Height }}" 
                         loading="lazy" 
                         data-key="{{ .context.Slug }}" 
                         data-hash="{{ $imageRaw.Data.Integrity }}">
+                    {{- end -}}
                 {{ else }}
                     <img src="{{ $image.permalink }}" loading="lazy" data-key="{{ .context.Slug }}" data-hash="{{ $image.permalink }}"/>
                 {{ end }}
