--- a/themes/stack-modified/layouts/partials/footer/components/script.html
+++ b/themes/stack-modified/layouts/partials/footer/components/script.html
@@ -14,4 +14,8 @@
     {{- $Permalink = $script.RelPermalink -}}
 {{- end -}}
 
-<script type="text/javascript" src="{{ $Permalink }}"{{ if eq .Site.Params.SRIHash.JS true }} integrity="{{ $script.Data.Integrity }}"{{ end }}{{ if eq hugo.IsProduction true }} crossorigin="anonymous"{{ end }} async></script>
+{{- if eq .Site.Params.Script.inlineScript false -}}
+<script type="text/javascript" src="{{- $Permalink -}}"{{- if eq .Site.Params.Script.SRIHash true -}} integrity="{{- $script.Data.Integrity -}}"{{- end -}}{{- if eq hugo.IsProduction true -}} crossorigin="anonymous"{{- end -}} async></script>
+{{- else -}}
+<script type="text/javascript" {{- if eq .Site.Params.Script.SRIHash true -}} integrity="{{- $script.Data.Integrity -}}"{{- end -}}>{{- $script.Content | safeJS -}}</script>
+{{- end -}}
