Theme Updates, Removing ToC for All Article and Page, and more
Theme Update:
- Stack Theme Update (Changelog: CaiJimmy/hugo-theme-stack@v3.5.0...6474b9d)
- Modified Theme Update to Commit `30a87ff` (see: FarrelF/stack-modified@30a87ff)

Article/Page(s):
- "Cara Install Hugo" Article Update
- Remove ToC for All Article/Page

Development Site Configuration:
- Change CSP Header
- Newline for every 2 CSP Hash

GitHub Actions:
- Build and Deploy: Change Cache Key for Resources

Shortcode:
- Add `vendorInfo` and `isVendorInfo` in `hugo-version-long` shortcode

--- a/layouts/shortcodes/hugo-version-long.html
+++ b/layouts/shortcodes/hugo-version-long.html
@@ -3,8 +3,14 @@
 {{- $Version := default hugo.Version (.Get "version") -}}
 {{- $BuildDate := default hugo.BuildDate (.Get "buildDate") -}}
 {{- $IsExtended := default hugo.IsExtended (.Get "extended") -}}
+{{- $VendorInfo := default "gohugoio" (.Get "vendorInfo") -}}
+{{- $IsVendorInfo := default true (.Get "isVendorInfo") -}}
+{{- $VendorInfoText := "" -}}
 {{- $Extended := "" -}}
-{{ if eq $IsExtended true }}
+{{- if eq $IsVendorInfo true -}}
+    {{- $VendorInfoText = printf " VendorInfo=%s" $VendorInfo -}}
+{{- end -}}
+{{- if eq $IsExtended true -}}
     {{- $Extended = "+extended" -}}
-{{ end }}
-{{- printf "hugo v%s-%s%s %s BuildDate=%s VendorInfo=gohugoio" $Version $Hash $Extended $Platform $BuildDate -}}
+{{- end -}}
+{{- printf "hugo v%s-%s%s %s BuildDate=%s%s" $Version $Hash $Extended $Platform $BuildDate $VendorInfoText -}}
