--- a/layouts/shortcodes/hugo-version-long.html
+++ b/layouts/shortcodes/hugo-version-long.html
@@ -2,7 +2,7 @@
 {{- $Hash := default (slicestr (hugo.CommitHash | upper) 0 8) (.Get "hash" | upper) -}}
 {{- $Version := default hugo.Version (.Get "version") -}}
 {{- $BuildDate := default hugo.BuildDate (.Get "buildDate") -}}
-{{- $IsExtended := default hugo.IsExtended (.Get "extended") -}}
+{{- $IsExtended := default hugo.IsExtended (or (.Get "isExtended") (.Get "extended")) -}}
 {{- $VendorInfo := default "gohugoio" (.Get "vendorInfo") -}}
 {{- $IsVendorInfo := default true (.Get "isVendorInfo") -}}
 {{- $VendorInfoText := "" -}}
