Switch to SHA512 from SHA384, Article Update and Shortcode Improvements
Theme Update:
- Stack Theme Update (Changelog: https://github.com/CaiJimmy/hugo-theme-stack/compare/6474b9d...67d5156)
- Modified Theme Update (Changelog: https://github.com/FarrelF/stack-modified/compare/30a87ff...dafc297)
- Switch to SHA512 as default for SRI Hash than SHA384

Netlify:
- Update Hugo version to 0.92.1

Article:
- Disable Autoplay Bunny Stream Video in "Nyobain Object Storage dari IDCloudHost (IS3)" Article

Shorcode Improvements:
- Improve `a-file` shortcode using `default` function rather than using `with` and `else`
- Improve `safeURL` and `safeCSS` usage in `bunny-stream` shortcode
- Move `upper` position in `hugo-version-long` shortcode

--- a/layouts/shortcodes/a-file.html
+++ b/layouts/shortcodes/a-file.html
@@ -1,15 +1,7 @@
 {{- $Resource := .Page.Resources.GetMatch (printf "%s" (.Get "path")) | resources.Fingerprint "md5" -}}
 <a class="link" 
-    href="{{ $Resource.RelPermalink }}"
-    {{ with .Get "rel" }}
-    rel="{{ . }}"
-    {{ else }}
-    rel="noopener"
-    {{ end }}
-    {{ with .Get "target" }}
-    target="{{ . }}"
-    {{ else }}
-    target="_blank"
-    {{ end }}>
-    {{ .Inner | $.Page.RenderString | emojify }}
+    href="{{- $Resource.RelPermalink -}}"
+    rel="{{- default `noopener` (.Get "rel") -}}"
+    target="{{- default `_blank` (.Get "target") -}}">
+    {{- .Inner | $.Page.RenderString -}}
 </a>
