--- a/layouts/shortcodes/bunny-stream.html
+++ b/layouts/shortcodes/bunny-stream.html
@@ -1,17 +1,17 @@
-{{- $divStyle := default (print "position: relative; padding-top: 56.25%;" | safeCSS) (.Get "div-style" | safeCSS) -}}
-{{- $Style := default (print "border: none; position: absolute; top: 0; height: 100%; width: 100%;" | safeCSS) (.Get "style" | safeCSS) -}}
+{{- $divStyle := default (print "position: relative; padding-top: 56.25%;") (.Get "div-style") -}}
+{{- $Style := default (print "border: none; position: absolute; top: 0; height: 100%; width: 100%;") (.Get "style") -}}
 {{- $Allow := default `accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;` (.Get "allow") -}}
-{{- $embedURI := default (print "https://iframe.mediadelivery.net/embed" | safeURL) (.Get "embed-uri" | safeURL) -}}
+{{- $embedURI := default (print "https://iframe.mediadelivery.net/embed") (.Get "embed-uri") -}}
 {{- $libraryID := default "926" (.Get "library-id") -}}
 {{- $videoID := .Get "id" -}}
 {{- $Autoplay := default false (.Get "autoplay") -}}
-{{- $videoURL := printf "%s/%s/%s?autoplay=%s" $embedURI $libraryID $videoID (string $Autoplay) | safeURL -}}
+{{- $videoURL := printf "%s/%s/%s?autoplay=%s" $embedURI $libraryID $videoID (string $Autoplay) -}}
 
-<div style="{{- $divStyle -}}">
+<div style="{{- $divStyle | safeCSS -}}">
     <iframe 
-        src="{{- $videoURL -}}" 
+        src="{{- $videoURL | safeURL -}}" 
         {{- if eq (.Get "lazyload") true -}}loading="lazy"{{- end -}} 
-        style="{{- $Style -}}" 
+        style="{{- $Style | safeCSS -}}" 
         allow="{{- $Allow -}}"
         {{- if eq (.Get "allowfullscreen") true -}}allowfullscreen="true"{{- end -}}>
     </iframe>
