--- a/layouts/shortcodes/a-file.html
+++ b/layouts/shortcodes/a-file.html
@@ -1,4 +1,4 @@
-{{- $Resource := .Page.Resources.GetMatch (printf "%s" (.Get "path")) | resources.Fingerprint "md5" -}}
+{{- $Resource := .Page.Resources.GetMatch (printf "%s" (.Get "path")) | resources.Fingerprint (default "md5" (.Get "hash")) -}}
 <a class="link" 
     href="{{- $Resource.RelPermalink -}}"
     rel="{{- default `noopener` (.Get "rel") -}}"
