--- a/layouts/shortcodes/info.html
+++ b/layouts/shortcodes/info.html
@@ -1,6 +1,6 @@
 {{- $id := printf "table-info-%d" .Ordinal -}}
 {{- $opts := dict "display" "block" "markup" "markdown" -}}
-<table {{ with .Get "style" }}style="{{ . | safeCSS }}"{{ end }} id="{{ $id }}">
+<table {{ with .Get "style" }}style="{{ . | safeCSS }}"{{ end }} class="table-info" id="{{ $id }}">
     <thead>
         <tr>
             <th class="table-info{{ with .Get "class" }} {{ . }}{{ end }}">{{ .Get "text" | markdownify | emojify }}</th>
