Article, Page and Theme Updates, Site Improvements, etc.
Theme:
- Main Theme Update
Changelog: https://github.com/CaiJimmy/hugo-theme-stack/compare/0fbbc12...v3.10.0

Modified Theme:
- Refactor Modified Theme to following latest version of Main Theme
- Add styles for Bunny Stream in `custom.scss`
- Remove Style for `:root`

Site Configuration:
- Twemoji version Update to `v14.0.0`
- Remove Home Button from Configuration
- Decrease Profile Avatar Resolution to 100px
- Change how to set widgets

Development Configuration:
- Change hashes in `style-src` and `script-src` CSP directive for Server

Contents:
- Add `_index.md` in `contents` folder for Main Menu/Home Button
- Update on "Tentang" Page
- Update on "Cara memasang ZeroSSL + Renew Otomatis di Netlify dan BunnyCDN" Article
- Update on "Cara menggunakan Termux dari Komputer/Laptop melalui SSH" Article

Requirement:
- Go minimum version change to 1.17

Shortcodes:
- Using Classes instead Inline Style for Bunny Stream Style

Netlify:
- Update Hugo version to v0.95.0

Misc:
- `README.md` Update

--- a/layouts/shortcodes/bunny-stream.html
+++ b/layouts/shortcodes/bunny-stream.html
@@ -1,5 +1,15 @@
-{{- $divStyle := default (print "position: relative; padding-top: 56.25%;") (.Get "div-style") -}}
-{{- $Style := default (print "border: none; position: absolute; top: 0; height: 100%; width: 100%;") (.Get "style") -}}
+{{- $divStyle := "" -}}
+{{- $Style := "" -}}
+{{- $divClass := "" -}}
+{{- $iframeClass := "" -}}
+{{- $useClass := default true (.Get "useClass") -}}
+{{- if eq $useClass true -}}
+    {{- $divClass = default "bunny-stream" (.Get "divClass") -}}
+    {{- $iframeClass = default "bunny-stream-iframe" (.Get "iframeClass") -}}
+{{- else -}}
+    {{- $divStyle = default (print "position: relative; padding-top: 56.25%;") (.Get "divStyle") -}}
+    {{- $iframeStyle = default (print "border: none; position: absolute; top: 0; height: 100%; width: 100%;") (.Get "iframeStyle") -}}
+{{- end -}}
 {{- $Allow := default `accelerometer; gyroscope; autoplay; encrypted-media; picture-in-picture;` (.Get "allow") -}}
 {{- $embedURI := default (print "https://iframe.mediadelivery.net/embed") (.Get "embed-uri") -}}
 {{- $libraryID := default "926" (.Get "library-id") -}}
@@ -7,6 +17,17 @@
 {{- $Autoplay := default false (.Get "autoplay") -}}
 {{- $videoURL := printf "%s/%s/%s?autoplay=%s" $embedURI $libraryID $videoID (string $Autoplay) -}}
 
+{{- if eq $useClass true -}}
+<div class="{{- $divClass | safeCSS -}}">
+    <iframe 
+        src="{{- $videoURL | safeURL -}}" 
+        {{- if eq (.Get "lazyload") true -}}loading="lazy"{{- end -}} 
+        class="{{- $iframeClass | safeCSS -}}" 
+        allow="{{- $Allow -}}"
+        {{- if eq (.Get "allowfullscreen") true -}}allowfullscreen="true"{{- end -}}>
+    </iframe>
+</div>
+{{- else -}}
 <div style="{{- $divStyle | safeCSS -}}">
     <iframe 
         src="{{- $videoURL | safeURL -}}" 
@@ -16,3 +37,4 @@
         {{- if eq (.Get "allowfullscreen") true -}}allowfullscreen="true"{{- end -}}>
     </iframe>
 </div>
+{{- end -}}
