Article, Page, Site comments, and Shortcode updates
Articles/Pages:
- `info text=` -> `info title=`
- Several content changes

GitHub Actions:
- Simplify Hugo Setup and remove unnecessary configuration line for GitHub Actions
- Using `SHORT_SHA` variable for dynamic artifact naming
- Change Hugo Modules cache key and path
- Change Hugo build command

Shortcodes:
- Remove `.Get extended` in `hugo-version-long` shortcode
- Change `text` to `title` in `info` shortcode

Giscus:
- Using local file for giscus styles in production
- Switch giscus lazy-loading to Native from Intersection Observer

Site Configuration:
- Using `http://localhost` as default Base URL (not for production)
- Changes in CSP Report-Only Header

Netlify:
- Hugo version update to `0.102.3`

--- a/layouts/shortcodes/hugo-version-long.html
+++ b/layouts/shortcodes/hugo-version-long.html
@@ -2,7 +2,7 @@
 {{- $Hash := default hugo.CommitHash (.Get "hash") -}}
 {{- $Version := default hugo.Version (.Get "version") -}}
 {{- $BuildDate := default hugo.BuildDate (.Get "buildDate") -}}
-{{- $IsExtended := default hugo.IsExtended (or (.Get "isExtended") (.Get "extended")) -}}
+{{- $IsExtended := default hugo.IsExtended (or (.Get "isExtended")) -}}
 {{- $VendorInfo := default "gohugoio" (.Get "vendorInfo") -}}
 {{- $IsVendorInfo := default true (.Get "isVendorInfo") -}}
 {{- $VendorInfoText := "" -}}
