--- a/layouts/shortcodes/spoiler.html
+++ b/layouts/shortcodes/spoiler.html
@@ -1,6 +1,6 @@
 {{- $id := printf "info-%d" .Ordinal -}}
 {{- $opts := dict "display" "block" "markup" "markdown" -}}
 <details class="info{{ with .Get "class" }} {{ . }}{{ end }}" {{ with .Get "style" }}style="{{ . | safeCSS }}"{{ end }} id="{{ $id }}">
-    <summary>{{ .Get "text" | markdownify | emojify }}</summary>
+    <summary>{{ .Get "title" | markdownify | emojify }}</summary>
     {{ .Inner | $.Page.RenderString $opts | emojify }}
 </details>
